--- a/app/views/create-user.ejs
+++ b/app/views/create-user.ejs
@@ -39,6 +39,6 @@
     src="js/user.js"
     id="ext-script"
     defer
-    url="<%= process.env.WEB_URL %>upload"
+    url="<%= process.env.WEB_URL %>user/new_user"
   ></script>
 </html>
